Add some styling

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Learning Spring Boot: Spring-a-gram</title>
+    <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
     <div>
@@ -19,7 +20,7 @@
         <tr th:each="image : ${page.content}">
             <td th:text="${image.id}"></td>
             <td th:text="${image.name}"></td>
-            <td><img th:src="@{'/images/' + ${image.name} + '/raw'}" /></td>
+            <td><img class="thumbnail" th:src="@{'/images/' + ${image.name} + '/raw'}" /></td>
         </tr>
         </tbody>
     </table>
