--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,24 +6,44 @@
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
+
+    <h3 th:if="${#vars['flash.message']}" th:text="${#vars['flash.message']}" class="flash"></h3>
+
     <div>
         <h3 th:text="${page.number + 1} + ' of ' + ${page.totalPages}" ></h3>
-    </div>
+        <h4 th:text="${page.size} + ' item(s) per page'" ></h4>
 
-    <table>
-        <thead>
-        <tr>
-            <th>Id</th><th>Name</th><th>Image</th><th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="image : ${page.content}">
-            <td th:text="${image.id}"></td>
-            <td th:text="${image.name}"></td>
-            <td><img class="thumbnail" th:src="@{'/images/' + ${image.name} + '/raw'}" /></td>
-        </tr>
-        </tbody>
-    </table>
+        <table>
+            <thead>
+            <tr>
+                <th>Id</th><th>Name</th><th>Image</th><th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="image : ${page.content}">
+                <td th:text="${image.id}"></td>
+                <td th:text="${image.name}"></td>
+                <td><a th:href="@{'/images/' + ${image.name} + '/raw'}"><img class="thumbnail" th:src="@{'/images/' + ${image.name} + '/raw'}" /></a></td>
+                <td>
+                    <form th:method="delete" th:action="@{'/images/' + ${image.name}}">
+                        <input type="submit" value="Delete" />
+                    </form>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <form method="post" enctype="multipart/form-data" action="/images">
+            <p><input type="file" name="file" /></p>
+            <p><input type="submit" value="Upload" /></p>
+        </form>
+
+        <ul>
+            <li th:if="${prev}"><a th:href="@{/(size=${prev.pageSize},page=${prev.pageNumber})}">Previous</a></li>
+            <li th:if="${next}"><a th:href="@{/(size=${next.pageSize},page=${next.pageNumber})}">Next</a></li>
+        </ul>
+
+    </div>
 
 </body>
 </html>
